WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165595
Cleanup WebAssembly's RETURN_IF_EXCEPTION
https://bugs.webkit.org/show_bug.cgi?id=165595
Summary
Cleanup WebAssembly's RETURN_IF_EXCEPTION
JF Bastien
Reported
2016-12-07 22:17:59 PST
encodedJSValue() can just be { } (which zero initializes) as Saam pointed out in
bug #165118
. I'll update the WebAssembly cases of this which my other patch doesn't fix.
Attachments
patch
(3.67 KB, patch)
2016-12-07 22:19 PST
,
JF Bastien
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
JF Bastien
Comment 1
2016-12-07 22:19:22 PST
Created
attachment 296489
[details]
patch
WebKit Commit Bot
Comment 2
2016-12-07 23:21:05 PST
Comment on
attachment 296489
[details]
patch Clearing flags on attachment: 296489 Committed
r209528
: <
http://trac.webkit.org/changeset/209528
>
WebKit Commit Bot
Comment 3
2016-12-07 23:21:09 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug