Cleanup WebAssembly's RETURN_IF_EXCEPTION https://bugs.webkit.org/show_bug.cgi?id=165595

Reviewed by Filip Pizlo.

* wasm/js/WebAssemblyCompileErrorConstructor.cpp:
(JSC::constructJSWebAssemblyCompileError):
* wasm/js/WebAssemblyFunction.cpp:
(JSC::callWebAssemblyFunction):
* wasm/js/WebAssemblyRuntimeErrorConstructor.cpp:
(JSC::constructJSWebAssemblyRuntimeError):


Canonical link: https://commits.webkit.org/183190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209528 268f45cc-cd09-0410-ab3c-d52691b4dbfc