Source/JavaScriptCore/wasm/js/WebAssemblyCompileErrorConstructor.cpp
@@ -50,7 +50,7 @@ static EncodedJSValue JSC_HOST_CALL constructJSWebAssemblyCompileError(ExecState
     auto scope = DECLARE_THROW_SCOPE(vm);
     JSValue message = state->argument(0);
     auto* structure = InternalFunction::createSubclassStructure(state, state->newTarget(), asInternalFunction(state->jsCallee())->globalObject()->WebAssemblyCompileErrorStructure());
-    RETURN_IF_EXCEPTION(scope, encodedJSValue());
+    RETURN_IF_EXCEPTION(scope, { });
     return JSValue::encode(JSWebAssemblyCompileError::create(state, structure, message, false));
 }
 
