Source/JavaScriptCore/wasm/js/WebAssemblyFunction.cpp
@@ -76,7 +76,7 @@ static EncodedJSValue JSC_HOST_CALL callWebAssemblyFunction(ExecState* exec)
         case Wasm::Anyfunc:
             RELEASE_ASSERT_NOT_REACHED();
         }
-        RETURN_IF_EXCEPTION(scope, encodedJSValue());
+        RETURN_IF_EXCEPTION(scope, { });
         boxedArgs.append(arg);
     }
 
